# openscreen

./: .gitignore  electron-builder.json5  package-lock.json  package.json  tsconfig.json  vite  vite.config.ts
.github/workflows/: build-release.yml
dist-electron/: index-D6oA_hCw.js  main.js  preload.mjs
electron/: electron-env.d.ts  main.ts  mouseTracker.ts  native.ts  preload.ts  windowDetector.ts  windows.ts
electron/ipc/: handlers.ts  mouseTracking.ts
figma-plugin/: README.md  code.js  code.ts  manifest.json  package-lock.json  package.json  tsconfig.json  ui.html
native/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
native/.cargo/: config.toml
native/scripts/: build.js
native/src/: decoder.rs  encoder.rs  error.rs  lib.rs  pipeline.rs  renderer.rs  types.rs
scripts/: build-native.ps1
src/: App.tsx  index.css  vite-env.d.ts
src/components/common/: FeatureGate.tsx
src/components/launch/: AISettingsDialog.tsx  CameraPreviewWindow.tsx  LaunchWindow.module.css  LaunchWindow.tsx  RegionIndicator.tsx  RegionSelector.tsx  SourceSelector.module.css  SourceSelector.tsx  TeleprompterWindow.tsx  WindowPicker.tsx
src/components/ui/: popover.tsx  slider.tsx
src/components/video-editor/: CameraSettingsPanel.tsx  CursorSettingsPanel.tsx  EditorTitleBar.module.css  EditorTitleBar.tsx  ExportDialog.tsx  LeftToolbar.tsx  MouseClickRipple.tsx  PictureInPicture.tsx  PlaybackControls.tsx  SettingsPanel.tsx  VideoEditor.tsx  VideoPlayback.tsx  (+2 more)
src/hooks/: useFeature.ts  useScreenRecorder.ts
src/pro/: index.ts
(+52 files in other folders)
